--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"start": "wp-scripts start"
 	},
 	"devDependencies": {
-		"@wordpress/scripts": "^30.17.0"
+		"@wordpress/scripts": "^30.17.0",
+		"prettier": "^3.6.2"
 	},
 	"dependencies": {
 		"@wordpress/icons": "^10.24.0"
